# concurrent_and_distributed_systems

./: CMakeLists.txt  README.md
folder_concurrency_patterns/: CMakeLists.txt
folder_concurrency_patterns/app_monitor_mrsw/: CMakeLists.txt  monitor.cpp
folder_concurrency_patterns/app_multiple_writers/: CMakeLists.txt  main_semaphore.cpp
folder_concurrency_patterns/app_occ/: CMakeLists.txt  main.cpp  occ.cpp  occ.h
folder_concurrency_patterns/app_producer_consumer/: CMakeLists.txt  doc_anonymous_condition_shared_data.hpp  reader.cpp  writer.cpp
folder_concurrency_patterns/app_semaphore_mrsw/: CMakeLists.txt  mrsw_semaphore.cpp
folder_concurrency_patterns/app_sleepmutex/: CMakeLists.txt  sleepmutex.cpp
folder_concurrency_patterns/include/: patterns.hpp
folder_concurrency_patterns/source/: CMakeLists.txt  semaphore.cpp
folder_concurrency_patterns/test_occ/: CMakeLists.txt  test_occ.cpp
folder_ipc_primitives/: CMakeLists.txt
folder_ipc_primitives/app_memory_mapped_file/: CMakeLists.txt  mmap_file.cpp
folder_ipc_primitives/app_shared_memory/: CMakeLists.txt  shared_memory.cpp
folder_multithreading_primitives/: CMakeLists.txt
folder_multithreading_primitives/app_basics/: CMakeLists.txt  main (copy).cpp  main.cpp
folder_multithreading_primitives/app_daytime/: CMakeLists.txt  daytime_client.cpp  daytime_server.cpp
